feat: Add `tut1.png` and update `index.html` to display it within a new section and reorder existing presentation slides.

--- a/index.html
+++ b/index.html
@@ -24,20 +24,8 @@
 
 			<section>
 				<h2>Get Familiar with reveal.js</h2>
-				<p>A framework for easily creating beautiful presentations using HTML.</p>
 			</section>
-			<section>
-				<h2>Fragments</h2>
-				<ul>
-					<li class="fragment">Appear</li>
-					<li class="fragment">One</li>
-					<li class="fragment">By One</li>
-				</ul>
-			</section>
-			<section data-background-color="#4d7e65">
-				<h2>Slide Backgrounds</h2>
-				<p>Set <code>data-background-color</code> to change the background.</p>
-			</section>
+
 			<section>
 				You can do the following commands to get started
 				<pre class="r-stretch"><code data-line-numbers="3| 12 | 40">
@@ -92,6 +80,26 @@ npm start
 [14:54:01] Running server
 					</code></pre>
 			</section>
+
+			<section>
+				and than modify the index.html file
+				<img src="tut1.png">
+			</section>
+
+
+			<section>
+				<h2>Fragments</h2>
+				<ul>
+					<li class="fragment">Appear</li>
+					<li class="fragment">One</li>
+					<li class="fragment">By One</li>
+				</ul>
+			</section>
+			<section data-background-color="#4d7e65">
+				<h2>Slide Backgrounds</h2>
+				<p>Set <code>data-background-color</code> to change the background.</p>
+			</section>
+
 			<section>
 				check my github page to learn more about me
 				<br>
